# compliance152

./: .env.example  .gitignore  ARCHITECTURE.md  CASES.md  CLAUDE.md  CLAUDE_CODE_RULES.md  CONTEXT_BUNDLE.md  Competitor_Intelligence_Monitor_Passport.md  DECISIONS.md  GOLDEN_SET_MAPPING.md  HANDOFF.md  NEXT_SESSIONS_PLAN.md  PATTERNS.md  PLAN.md  PROGRESS.md  PROJECT_PASSPORT.md  README.md  SESSION_NOTES_1_2026.03.17.md  SESSION_NOTES_2026-03-16.md  SESSION_NOTES_2026-03-17.md  SESSION_NOTES_2026-03-20.md  SESSION_NOTES_2026-03-20_2.md  SESSION_NOTES_2026-03-24.md  _scan_umschool_v2.py  bulk_scan_sites_to_excel.py  bulk_scan_sites_v2_to_excel.py  docs_scanner_logic.md  generate_excel_instruction_sheet.py  pyproject.toml  requirements.txt  run_scan_test.py  run_umschool_scan.py  streamlit_app.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1_bug_report.md  2_feature_request.md  3_task.md
.github/workflows/: ci.yml
config/: sources.yaml
data/: scan_umschool_net.json  scan_umschool_net.txt  scan_umschool_net_v2.txt
docs/: TESTING_GUIDE.md
knowledge_base/checklists/: fine_schedule.json  (+2 more)
src/: config.py  main.py
src/api/: server.py
tests/: test_competitor.py  test_consent_checks.py  test_crawler.py  test_detectors.py  test_export.py  test_generator.py  test_knowledge.py  test_legal_updates.py  test_monitor.py  test_orchestrator.py  test_pdf_extractor.py  test_pdf_extractors.py  test_playwright_crawler.py  test_policy_content_detectors.py  test_reporter.py  test_telegram.py  test_tracker_checks.py  test_web_tools.py
tools/: run_golden_scan.py
(+54 files in other folders)
